--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2e6ba9b2",
    "metadata": {},
    "outputs": [],
@@ -53,11 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6c52078e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import numpy as np\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "answer(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +83,16 @@
    "execution_count": null,
    "id": "023a2c52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print(np.__version__)\n",
+      "np.show_config()\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -245,11 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c0643b1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = np.random.random((10,10))\n",
+      "Zmin, Zmax = Z.min(), Z.max()\n",
+      "print(Zmin, Zmax)\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(13)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1680,7 +1712,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
